# ibm-ds-capstone

./: .gitignore  01-data-collection-api.ipynb  01-data-collection-webscraping.ipynb  01-data-wrangling.ipynb  02-eda-dataviz.ipynb  02-eda-sql.ipynb  03-dash-app.py  03-folium-map.ipynb  04-predictive-models.ipynb  README.md  pyproject.toml  shell.nix
diagrams/: collection-detailed.graphml  collection-wikipedia.graphml  collection.graphml  models.graphml  wrangling.graphml
