[project]
name = "ibm-data-science-capstone"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Martin Walsh", email = "1520570+martinwalsh@users.noreply.github.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "jupyterhub>=4.1.5",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "plotly>=5.21.0",
    "folium>=0.16.0",
    "dash>=2.16.1",
    "scikit-learn>=1.4.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "sqlalchemy>=2.0.29",
    "ipython-sql>=0.5.0",
    "ipython-pip>=0.3",
    "wget>=3.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ibm_data_science_capstone"]
